# Flomo-jsonlizer

./: .gitignore  AGENTS.md  Plan.md  README.md  pyproject.toml
docs/: migration.md  runbook.md  schema.md
examples/: README.md
scripts/: build_store.py  launch_memo_sync.sh  validate_store.py
src/: __init__.py  models.py  parser.py  validator.py  writer.py
store/: images.jsonl  memos.jsonl  missing_images.jsonl
tests/: __init__.py  conftest.py  test_e2e.py  test_models.py  test_parser.py  test_schema.py  test_validator.py  test_writer.py
tools/apple/: Memo Sync.applescript  build_app.sh
